kubernetes/home/printer/mainsail/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &appName mainsail
  namespace: printer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *appName
  template:
    metadata:
      labels:
        app: *appName
    spec:
      containers:
        - name: *appName
          image: ghcr.io/mainsail-crew/mainsail:v2.19.0
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 5m
              memory: 16Mi
            limits:
              cpu: 20m
              memory: 64Mi
          volumeMounts:
            - mountPath: /var/cache/nginx/
              name: cache
            - mountPath: /var/run
              name: run
            - mountPath: /usr/share/nginx/html/config.json
              name: config
              subPath: config.json
          ports:
            - name: &httpPort http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: *httpPort
          readinessProbe:
            httpGet:
              path: /
              port: *httpPort
      volumes:
        - name: cache
          emptyDir: {}
        - name: run
          emptyDir: {}
        - name: config
          configMap:
            name: mainsail-config
